--- a/AksSpecs/todo-list-web-deployment.yaml
+++ b/AksSpecs/todo-list-web-deployment.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.30.0 (9d8dcb518)
   creationTimestamp: null
   labels:
-    io.kompose.service: todo-list-save-handler
-  name: todo-list-save-handler
+    io.kompose.service: todo-list-web
+  name: todo-list-web
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: todo-list-save-handler
+      io.kompose.service: todo-list-web
   strategy: {}
   template:
     metadata:
@@ -23,11 +23,15 @@ spec:
       creationTimestamp: null
       labels:
         io.kompose.network/convertedfiles-default: "true"
-        io.kompose.service: todo-list-save-handler
+        io.kompose.service: todo-list-web
     spec:
       containers:
-        - image: nitu1122/todo-list-save-handler:1.0
-          name: todo-list-save-handler
+        - image: nitu1122/todo-list-web:1.0
+          name: todo-list-web
+          ports:
+            - containerPort: 80
+              hostPort: 8099
+              protocol: TCP
           resources: {}
           volumeMounts:
             - mountPath: "/app/config"
@@ -35,8 +39,14 @@ spec:
               readOnly: true
       restartPolicy: Always
       volumes:
-      - name: appsettings
-        configMap:
-            name: appsettings
-         
+        - name: appsettings
+          csi:
+            driver: sectets-store.csi.k8s.io
+            readOnly: True
+            volumeAttributes:
+              secretProviderClass: scp-keyvault-01  
 status: {}
+            
+     
+          
+
